manifests/gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: demo-gateway-class
spec:
  controllerName: 'thebsdbox.co.uk/controller'
  description: Demo implementation
