manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: default
spec:
  gatewayClassName: demo-gateway-class
  listeners:
  - name: http-server
    port: 8080
    protocol: TCP
