manifests/tcproute_label_selectors.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-label
  namespace: default
  labels:
    selectorkey: run
    selectorvalue: my-nginx
    serviceBehaviour: create
spec:
  parentRefs:
  - name: demo-gateway # name of gateway
    sectionName: http-server  # name of listenter
  rules:
  - backendRefs:
    - name: my-nginx-label
      port: 80
